# vadankhan-spectrumanalyser-deploybuild

./: .gitignore  pyproject.toml  requirements.txt  vadankhan_spectrumanalysis.bat  vadankhan_spectrumanalysis_debug.bat  vadankhan_spectrumanalysis_folderclear.bat  vadankhan_spectrumanalysis_minimised.bat
vadankhan_spectrumanalyser_deploybuild/: move_files.py  spectrum_files_transform_watchdog.py
